--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/kqwq/lu-snipes-models.git"
+  },
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/@kqwq"
   }
