--- a/package.json
+++ b/package.json
@@ -5,5 +5,9 @@
   "license": "MIT",
   "dependencies": {
     "mongoose": "^6.7.1"
+  },
+  "type": "module",
+  "scripts": {
+    "test": "node models/user.js"
   }
 }
