--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lu-snipes-models",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
@@ -8,6 +8,6 @@
   },
   "type": "module",
   "scripts": {
-    "test": "node models/user.js"
+    "test": "node ."
   }
 }
